fixed derivate-browser-footer overlapping filelist

--- a/jportal_derivate_browser/src/main/resources/META-INF/resources/modules/derivate-browser/gui/css/derivatebrowser.css
+++ b/jportal_derivate_browser/src/main/resources/META-INF/resources/modules/derivate-browser/gui/css/derivatebrowser.css
@@ -135,6 +135,7 @@ ul{
 #files{
 	height: 100%;
 	position: relative;
+	display: inline-flex;
 }
 
 #folder-list-div{
